[TASK] Reformat code to PSR-2

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,18 @@
 {
-	"name": "netlogix/jsonapiorg",
-	"type": "typo3-flow-package",
-	"homepage": "http://www.netlogix.de",
-	"license": ["MIT"],
-	"require": {
-		"typo3/flow": "*"
-	},
-	"suggest": {
-	},
-	"autoload": {
-		"psr-0": {
-			"Netlogix\\JsonApiOrg": "Classes"
-		}
-	}
+  "name": "netlogix/jsonapiorg",
+  "type": "typo3-flow-package",
+  "homepage": "http://www.netlogix.de",
+  "license": [
+    "MIT"
+  ],
+  "require": {
+    "typo3/flow": "*"
+  },
+  "suggest": {
+  },
+  "autoload": {
+    "psr-0": {
+      "Netlogix\\JsonApiOrg": "Classes"
+    }
+  }
 }
