--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -18,7 +18,7 @@ Netlogix\JsonApiOrg\Resource\Resolver\ResourceResolverInterface:
 Netlogix\JsonApiOrg\Resource\Resolver\ResourceResolverBySubrequest:
   properties:
     requestEngine:
-      object: Neos\Flow\Http\Client\CurlEngine
+      object: TYPO3\Flow\Http\Client\CurlEngine
 
 
 #                                                                        #
@@ -32,7 +32,7 @@ Netlogix\JsonApiOrg\Resource\Resolver\ResourceResolverBySubrequest:
 #
 #    oneToOneTypeToClassMap:
 #      value:
-#        'Neos\Flow\Security\Account': 'account'
+#        'TYPO3\Flow\Security\Account': 'account'
 #
 #    classIdentifierToTypeNameMap:
 #      value:
