--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "MIT"
     ],
     "require": {
-        "neos/flow": "*"
+        "neos/flow": "^8.2"
     },
     "autoload": {
         "psr-0": {
